<resources>
    <string name="app_name">Architecture Component Practice</string>

    <string name="all_users">All Users</string>

    <string name="create_new_user">Create New User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="update_user">Update User</string>
</resources>
