<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickHandler"
            type="com.codebosses.architecturecomponentpractice.activities.UpdateUserActivity.ClickHandler" />

        <variable
            name="user"
            type="com.codebosses.architecturecomponentpractice.database.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutUpdateUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.UpdateUserActivity">

        <include
            android:id="@+id/appBarUpdateUser"
            layout="@layout/app_bar_main" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:maxLength="9"
            android:paddingBottom="12dp"
            android:text="@{user.firstName}"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarUpdateUser" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:maxLength="9"
            android:paddingBottom="12dp"
            android:text="@{user.lastName}"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextFirstName"
            app:layout_constraintTop_toBottomOf="@+id/appBarUpdateUser" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:text="@{user.email}"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:text="@{user.password}"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorAccent"
            android:onClick="@{clickHandler::onCancelClick}"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/buttonCreate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:background="@color/colorPrimary"
            android:onClick="@{clickHandler::onUpdateClick}"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>